style.css
/* ... */
.crosspopup-namemix:hover {
    opacity: 0.8;
}

.popup-delete-div__screen{
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;
    backdrop-filter: blur(3px);
    display: none;
}

.popup-delete-div {
    position: fixed;
    background: #0a0a0ade;
    backdrop-filter: blur(20px);
    border: 2px solid #333333;
    border-radius: 8px;
    width: 50%;
    height: 200px;
    z-index: 999;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 15px;
    max-width: 600px;
}

.popup-delete-div-btns {
    display: flex;
    gap: 15px;
}

.btn-popop-delete {
    padding: 5px 10px;
    border-radius: 53px;
    cursor: pointer;
    font-size: 16px;
    border: none;
}

.btn-popop-delete__yes {
    background: crimson;
}

.btn-popop-delete:hover {
    opacity: 0.7;
}

.form-namemix {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 5px;
}

.input-namemix {
    width: 100%;
    padding: 10px 60px 10px 15px;
    font-size: 16px;
    outline: none;
    border: none;
    box-shadow: 0 0 3px 0px #0000002b;
    border-radius: 10px;
}

.div-input-btn__mymix {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    position: relative;
}

.btn-input-mymix {
    position: absolute;
    right: 2px;
    display: flex;
    border: none;
    background: none;
    cursor: pointer;
    background: black;
    color: white;
    border-radius: 9px;
    padding: 5px;
}

.btn-input-mymix:hover {
    opacity: 0.8;
}

.div-sections{
    width: 90%;
    padding: 20px 0;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.section__mix {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    margin: 0 auto;
    gap: 10%;
    width: 90%;
    max-width: 795px;
    border-bottom: 1px solid #838383;
    padding-bottom: 15px;
}

.group__default-mix {
    width: max-content;
    display: flex;
    gap: 5px;
    flex-flow: column wrap;
    padding: 5px;
}

.group__my-mix {
    width: max-content;
    display: flex;
    flex-flow: column wrap;
    gap: 5px;
    padding: 5px;
}

.group-btn__mix {
    border-radius: 10px;
    display: flex;
    gap: 10px;
    flex-flow: row wrap;
    justify-content: center;
    align-items: flex-start;
}

.group__my-mix-p-btn {
    display: flex;
    gap: 5px;
    align-items: center;
    flex-flow: row nowrap;
}


.btn-mix {
    border-radius: 50px;
    border: none;
    background: #3D3F42;
    color: white;
    font-size: 16px;
    padding: 10px 20px;
    flex-grow: 1;
    cursor: pointer;
    transition: 0.3s ease-out;
}

.btn-mix:hover {
    opacity: 0.7;
}

.btn__my-mix {
    box-shadow: inset 0 0 0 2px white;
}

.btn__my-mix-clicked {
    background: white;
    color: black;
    background-image: url(assets/bg-mymix.png);
    background-position: bottom;
}

.p__my-mix {
    display: flex;
    gap: 5px;
    justify-content: flex-start;
    align-items: center;
}

.btn-delete-mix {
    background: none;
    border: none;
    color: white;
    cursor: pointer;
    transition: background-color 0.3s;
}

.btn-delete-mix:hover {
    color: crimson;
}

.btn-delete-mix span {
    font-size: 20px;
}

.material-symbols-outlined.btn-delete-mix {
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
}

.beach-campfire-btn-clicked{
    background: linear-gradient(45deg, #ffeb3bd1, #e91e63d4), url(assets/beachcampfire-bg-btn.png);
    color: #ffffff;
    background-size: cover;
    background-position: bottom;
    background-blend-mode: hard-light;
    box-shadow: 0 0 20px 0px #ff7b004d;
}

.calm-storm-btn-clicked{
    background: linear-gradient(45deg, #9C27B0, #2196F3), url(assets/calmstorm-bg-btn4.jpg);
    color: #ffffff;
    background-size: cover;
    background-position: center;
    background-blend-mode: screen;
    box-shadow: 0 0 20px 0px #7700ff4d;
}

.seaside-city-btn-clicked{
    background: linear-gradient(180deg, #00b8ff, #0756ff), url(assets/test-bg-seasidecity3.png);
    background-size: cover;
    background-position: center;
    background-blend-mode: hard-light;
    box-shadow: 0 0 20px 0px #0069ff63;
}
.section__ambiance {
    margin: 0 auto;
}

.container__ambiance {
    display: grid;
    gap: 25px;
    grid-template-columns: repeat(4, 180px);
    grid-template-rows: repeat(3, 180px);
    justify-items: start;
    justify-content: center;
    min-height: max-content;
    transition: 0.2s ease-out;

    position: relative;
}

.clicked-mymix-container1 {
    padding: 50px;
    border: 2px solid #838383;
    border-radius: 15px;
    position: relative;
    margin-top: 30px;
}

.p-select-sounds {
    position: absolute;
    background: white;
    color: black;
    padding: 5px 15px;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%) rotateX(90deg);
    border-radius: 50px;
    font-size: 18px;
    width: max-content;
    transition: 0.3s ease-out;
}

.btn-save-mymix{
    display: none;
    position: absolute;
    z-index: 999;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 50%);
    padding: 6px 35px;
    font-size: 16px;
    cursor: pointer;
    background: white;
    border: none;
    border-radius: 50px;
    overflow: hidden;
}
.spansave {
    position: relative;
    z-index: 9999;
}

.btn-save-mymix::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: linear-gradient(45deg, rgb(70, 96, 255), rgb(14, 204, 255));
    top: 101%;
    left: 0;
    transition: 0.2s cubic-bezier(0.49, 0.12, 0.58, 1);
}

.btn-save-mymix:hover.btn-save-mymix::before {
    top: 0;
}

.div__volume-general {
    width: max-content;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: center;
}
/* ... */

